--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "development": "mix",
+        "production": "mix --production"
     },
     "devDependencies": {
         "@coreui/coreui": "^4.0.2",
