--- a/.env.example
+++ b/.env.example
@@ -124,3 +124,9 @@ FIREBASE_CREDENTIALS=firebase/khadamati-firebase.json
 # https://console.firebase.google.com/project/_/database
 FIREBASE_DATABASE_URL=https://bidi-21e78.firebaseio.com
 FIREBASE_CREDENTIALS_PATH=firebase/khadamati-firebase.json
+
+SMS_USER='mshahwan'
+SMS_GATEWAY_URL=https://sendsms.ngt.jo/http/send_sms_http.php
+SMS_SENDER=KhdmatiPlus
+SMS_PASSWORD='MShahwan@5794'
+DEFAULT_COUNTRY_CODE=962
