--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
         "livewire/livewire": "^3.5",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-medialibrary": "^11.9",
         "spatie/laravel-permission": "^6.0",
