--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,12 @@
         "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
         "livewire/livewire": "^3.5",
         "maatwebsite/excel": "^3.1",
+        "socialiteproviders/facebook": "^4.1",
         "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-medialibrary": "^11.9",
         "spatie/laravel-permission": "^6.0",
